--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.0",
@@ -23,7 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "superjson": "1.9.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
