--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@hookform/resolvers": "^2.9.11",
@@ -29,7 +32,8 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
+    "@faker-js/faker": "^7.6.0",
+    "@types/node": "^18.14.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -43,7 +47,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.4.0"
