--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "slugify": "^1.6.5",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
