--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@supabase/supabase-js": "^2.14.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "base64-arraybuffer": "^1.0.2",
+    "is-data-uri": "^0.1.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
-    "next-auth": "^4.19.0",
+    "next-auth": "^4.21.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
@@ -32,6 +35,7 @@
     "react-icons": "^4.7.1",
     "slugify": "^1.6.5",
     "superjson": "1.9.1",
+    "validator": "^13.9.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
@@ -40,6 +44,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/validator": "^13.7.14",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
