--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="postgresql://user:password@localhost:5432/postgres"
+
 
 # Next Auth
 # You can generate a new secret on the command line with:
@@ -20,6 +21,11 @@ DATABASE_URL="file:./db.sqlite"
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+
+# Next Auth Google Provider
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# Supabase Credentials
+SUPABASE_PUBLIC_URL=""
+SUPABASE_SECRET_KEY=""
