adds unsplash api and creates a router for it

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,8 @@ GOOGLE_CLIENT_SECRET=""
 # Supabase Credentials
 SUPABASE_PUBLIC_URL=""
 SUPABASE_SECRET_KEY=""
+
+
+# Unsplash API Access Credentials
+UNSPLASH_API_ACCESS_KEY=""
+UNSPLASH_API_SECRET_KEY=""
