--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.7.1",
     "slugify": "^1.6.5",
     "superjson": "1.9.1",
+    "unsplash-js": "^7.0.18",
     "validator": "^13.9.0",
     "zod": "^3.20.6"
   },
