--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-scroll-area": "1.0.4",
     "@supabase/supabase-js": "^2.14.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
