--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@vercel/analytics": "^1.0.1",
     "base64-arraybuffer": "^1.0.2",
     "interweave": "^13.1.0",
     "is-data-uri": "^0.1.0",
